<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/header"
    android:background="@color/light_grey"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageButton
      android:id="@+id/backButton"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:src="@drawable/baseline_arrow_back_24"
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:contentDescription="@string/todo" />
  </androidx.constraintlayout.widget.ConstraintLayout>
  <TextView
    android:id="@+id/title"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:layout_marginTop="110dp"
    android:textSize="50sp"
    android:textColor="?attr/colorOnBackground"
    android:text="@string/app_title" />
  <TextView
    android:id="@+id/helpText"
    app:layout_constraintTop_toBottomOf="@id/title"
    android:layout_marginTop="40dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/white"
    android:textAlignment="center"
    android:textSize="18sp"
    android:text="@string/game_description" />
</androidx.constraintlayout.widget.ConstraintLayout>
